# django-notification-sender

./: .gitignore  MANIFEST.in  Makefile  README.md  setup.cfg  tox.ini
.github/workflows/: test.yml
notifications/: __init__.py  admin.py  apps.py  blocks.py  models.py  urls.py  utils.py  views.py
notifications/management/commands/: notification_sender.py  notification_test.py
notifications/migrations/: 0001_initial_20210729.py  0002_auto_20210913_1046.py  0003_auto_20210913_1050.py  0004_event_description.py  0004_notification_notificatio_status_d92267_idx.py
notifications/static/django/forms/widgets/: randomgeneratetext.js
notifications/templates/admin/notifications/notification/: change_form_object_tools.html  preview_mail.html  preview_slack.html
notifications/templates/django/forms/widgets/: randomgeneratetext.html
testapp/: requirements.txt
testapp/testapp/: models.py  settings.py  urls.py
testapp/testapp/management/commands/: brute_notify.py
testapp/testapp/templates/templated_email/: random.email
testapp/tests/: test_blocks.py  test_generic.py  test_sender.py  test_tester.py
