[metadata]
name = django-notification-sender
version = attr: notifications.__version__
description = Pluggable app to centralize notification configuration.
author = PPB - InfoSec Engineering
author_email = surface@paddypowerbetfair.com
url = https://github.com/surface-security/django-notification-sender
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Environment :: Web Environment
    Topic :: Software Development

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 3.0, <4.0
    # FIXME: make locks an optional dependency (and use, in the notification_sender command)
    django-database-locks < 1
    # tested with 2.3.0 and 3.0.0
    django-templated-email >= 2.3, <4
    html2text
    slack-sdk >=3.11.2, <4

[options.packages.find]
exclude =
    tests
    tests.*

[coverage:run]
source = notifications

[coverage:report]
show_missing = True
skip_covered = True
